using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace TicTacToe.Models;
public enum GameStatus
{
    InProgress,
    Finished,
    Draw,
}
